# Automative-RAG

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.streamlit  curl-examples.sh  docker-compose.yml  docker_compose.yml  download_models.sh  download_models_cn.sh  env.example  gpu_worker_manager.sh  hfd.sh  install.sh  install_qdrant.sh  job_cleanup_service.py  local-llm-docs.md  print_tree.sh  project_overview.md  project_structure.sh  pyproject.toml  readme.md  redis.conf  requirements.txt  run_api.sh  run_ui.sh
scripts/: check_models.py  create_qdrant_collection.py  direct_qdrant_check.py  load_example_data.py  priority_monitor.py  reset_system.py  task_distributor.py  test_end_to_end.py  verify_ingestion.py
src/: __init__.py
src/api/: __init__.py  auth.py  dependencies.py  ingest.py  main.py  query.py
src/api/routers/: __init__.py  auth.py  ingest.py  model.py  query.py  system.py
src/config/: __init__.py  settings.py  utils.py
src/controllers/: query_controller.py  workflow_controller.py
src/core/: __init__.py  background_tasks.py  base_video_transcriber.py  colbert_reranker.py  document_processor.py  enhanced_transcript_processor.py  llm.py  mode_config.py  pdf_loader.py  retriever.py  vectorstore.py  video_transcriber.py  worker_status.py  youku_transcriber.py  youtube_transcriber.py
src/core/background/: __init__.py  common.py  job_chain.py  job_tracker.py  models.py  monitoring.py  priority_queue.py  unicode_actor.py
src/core/background/actors/: inference.py  ingestion.py  system.py
src/core/ingestion/: __init__.py  factory.py
src/core/ingestion/base/: __init__.py  processor.py
src/core/ingestion/loaders/: __init__.py  enhanced_transcript_processor.py  pdf_loader.py  video_transcriber.py
src/core/ingestion/processors/: __init__.py  pdf_processor.py  text_processor.py  video_processor.py
src/core/ingestion/tasks/: __init__.py  embedding_tasks.py  pdf_tasks.py  text_tasks.py  video_tasks.py
src/core/orchestration/: __init__.py  dramatiq_helpers.py  job_chain.py  job_tracker.py  queue_manager.py  task_router.py
src/core/query/: __init__.py
src/core/query/llm/: __init__.py  local_llm.py  rerankers.py
src/core/query/retrieval/: __init__.py  vectorstore.py
src/core/query/tasks/: __init__.py  inference_tasks.py  retrieval_tasks.py
src/core/validation/: confidence_calculator.py  hybrid_validation_engine.py  meta_validator.py  pipeline_manager.py  validation_engine.py  validation_interface.py
src/core/validation/guidance/: guidance_engine.py  guided_trust_loop.py
src/core/validation/meta_validation/auto_fetch/: auto_fetch_coordinator.py
src/core/validation/meta_validation/user_guidance/: failure_guidance.py  guided_trust_loop.py  validation_cache_manager.py
src/core/validation/models/: validation_models.py
src/core/validation/prompts/: mode_prompt_manager.py
src/core/validation/steps/: base_validation_step.py  completeness_analysis.py  consensus_analysis.py  llm_response_quality.py  remaining_validation_steps.py  retrieval_quality.py  source_credibility_validator.py  steps_readiness_checker.py  technical_consistency_validator.py
src/core/validation/tasks/: auto_fetch_task.py  base_validation_task.py  knowledge_validation_task.py  llm_phase_validation_task.py  meta_validation_task.py  validation_cache_task.py
src/models/: __init__.py  auth_models.py  causation_models.py  document_models.py  enums.py  job_models.py  knowledge_models.py  query_models.py  schema.py  system_models.py  task_models.py  validation_models.py  workflow_models.py
src/services/: causation_service.py  document_processing_service.py  document_service.py  orchestration_service.py  query_service.py  response_processing_service.py  system_service.py  validation_service.py  workflow_service.py
src/ui/: __init__.py  api_client.py  app.py  components.py  enhanced_error_handling.py  enhanced_worker_status.py  interactive_priority_queue_visualization.py  job_chain_visualization.py  model_loading_status_indicator.py  session_init.py  system_notifications.py  task_progress_visualization.py  主页.py
src/ui/components/: __init__.py  contextual_help.py  fact_checker_display.py  metadata_display.py  query_history.py  query_refinement.py  query_templates.py  result_quality.py  smart_suggestions.py  trust_indicators.py  usage_analytics.py  validation_display.py
src/ui/pages/: __init__.py  home.py  ingest.py  query.py  作业链仪表板.py  后台任务.py  数据摄取.py  文档浏览.py  智能查询.py  查询.py  模型管理.py  系统信息.py  系统管理.py  系统通知.py
src/utils/: __init__.py  helpers.py  logging.py  model_paths.py  quality_utils.py  unicode_handler.py
tests/:  test_colbert.py  __init__.py  conftest.py  test_api.py  test_ingest.py  test_retrieval.py
