[tool.poetry]
name = "automotive_rag"
packages = [{ include = "*", from = "src" }] 
version = "0.1.0"
description = "Automotive Specifications RAG System with Local LLM and GPU Acceleration"
authors = ["Your Name <your.email@example.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
langchain = "==0.3.20"
langchain-community = ">=0.3.19,<0.4.0"
langchain-core = "*"
python-jose = "*"
passlib = "*"
pydantic = "*"
pydantic-settings = "*"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*" }
streamlit = "*"
qdrant-client = "*"
sentence-transformers = "*"
torch = {version = "*", extras = ["cuda"]}
transformers = "*"
opencc-python-reimplemented = "*"
yt-dlp = "*"  # For Bilibili and enhanced YouTube downloading
python-dotenv = "*"
pytest = "*"
colbert-ai = "*"
pypdf = "*"
faiss-cpu = "*"
tqdm = "*"
ffmpeg-python = "*"
moviepy = "*"
httpx = "*"
python-multipart = "*"
deepseek-ai = "*"
beautifulsoup4 = "*"
tiktoken = "*"
openai-whisper = "*"  # GPU-accelerated transcription
paddlepaddle = { version = "*", markers = "sys_platform == 'darwin'" }
paddlepaddle-gpu = { version = "*", markers = "sys_platform == 'linux'" }
paddleocr = "*"  # OCR for PDFs
camelot-py = "*"  # Table extraction from PDFs
opencv-python = "*"  # Required for camelot
ghostscript = "*"  # Required for camelot
pymupdf = "*"  # PDF processing with GPU support
bitsandbytes = "*"
accelerate = "*"
bcrypt = "==4.0.1"
langchain_huggingface = "*"
langchain-qdrant ="*"
numpy = "*"
faster-whisper = "*"
# New background processing requirements
dramatiq = ">=1.15.0"
redis = ">=5.0.0"
pandas = "*"  # For data display in the UI
watchdog = "*"  # For watching file changes
jieba = ">=0.42.1"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
flake8 = "*"
pytest = "*"
pytest-cov = "*"
mypy = "*"
debugpy = "*"
pydevd_pycharm = "~243.25659.43"
ctranslate2 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
